Sastre 0.35 [Mar 3, 2020]
==========================

Enhancements:
    - Backup task now also backup device certificates when the 'all' tag is used. The restore task does not restore
      certificates.
    - New certificate task, allowing device certificate validity status to be restored from a backup or set to a
      desired value (i.e. valid, invalid or staging).
    - List task now contains two sub-modes: configuration or certificate. List configuration works the same way as on
      previous releases by listing configuration items (e.g. device templates, feature templates, policies, etc.).
      The new certificate sub-mode allows listing of device certificate information from vManage or from a backup.
    - Restore task now verifies whether vBond is configured (Administration > Settings > vBond). If vBond is not
      configured, device templates are skipped from the restore as it would otherwise fail. A warning message notifies
      when this happens.


Sastre 0.34 [Jan 9, 2020]
==========================

Enhancements:
    - Validated support for vManage 19.3 and included new API endpoints supporting device access policies.
    - Included vManage version check. A warning is displayed during restore task if the vManage version on backup is
      newer than the version on target vManage. Maintenance releases (i.e. 3rd digit in the version number) are ignored
      for the purpose of this verification.


Sastre 0.33 [Dec 6, 2019]
==========================

Enhancements:
    - Sastre is now published to PyPI as cisco-sdwan package. When installed via pip, sdwan or sastre can be used to
      run the application.
    - When installed via source on github, the application can now be called using sdwan.py or sastre.py.


Sastre 0.31 [Nov 18, 2019]
==========================

Enhancements:
    - Template attach and reattach functions now support CLI templates. This means that restore --attach and --force